tests/ui/duplicate-modifier.rs
fn main() {
    crokey::key!(ctrl-ctrl-5);
    crokey::key!(alt-alt-5);
    crokey::key!(shift-shift-5);
    crokey::key!(shift-alt-shift-ctrl-5);
}
